# suntrack

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: app.rs  config.rs  db.rs  icon.rs  main.rs  paths.rs  state.rs  tracker.rs
src/view/: calendar_page.rs  hud.rs  mod.rs  nav.rs  sessions_page.rs  theme.rs  tracker_page.rs  widgets.rs
