[package]
name = "suntrack"
version = "0.1.0"
edition = "2024"
description = "A lightweight, local-first desktop time tracker for Windows, built in Rust."
authors = ["Fariz Prawira"]
license = "MIT"
repository = "https://github.com/FarizPrawira/suntrack"
readme = "README.md"
keywords = ["time-tracking", "productivity", "tracker", "egui", "desktop"]
categories = ["gui"]

[dependencies]
active-win-pos-rs = "0.11.0"
chrono = "0.4.44"
eframe = "0.34.3"
egui-phosphor = "0.12.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
user-idle = "0.6.0"
